# voxcmp2-onnx-cpu

./: .gitignore  .gitmodules  AGENTS.md  README.md  REPORT.md  pyproject.toml  setup.sh
app/: __init__.py  demo.py  voxcpm2_onnx.py
docs/: api.md  architecture.md  audio_vae_encoder_onnx_report.md  benchmarking.md  bf16_compute_strategy.md  bf16_feasibility.md  decode_state_contract.md  dtype_cleanup_report.md  export_contract.md  export_precision_profiles.md  exporting.md  feature_matrix.md  fixed_cache_report.md  module_boundaries.md  perf_baseline.md  performance_tuning.md  platform_support.md  precision.md  precision_strategy.md  prefill_blockers.md  profile_hotspots.md  runtime_contract.md  torch_dependency_audit.md
src/bench/: __init__.py  compare_pipelines.py
src/cli/: __init__.py  synthesize.py
src/contracts/: __init__.py  module_schemas.py
src/experiments/: __init__.py  bf16_feasibility.py
src/export/: build_runtime_artifacts.py  common.py  export_all.py  export_audio_vae_decoder.py  export_audio_vae_encoder.py  export_decode_chunk.py  export_decode_step.py  export_prefill.py  patch_bf16_ort_cpu.py
src/parity/: trace_generate.py
src/runtime/: pipeline.py  run_audio_vae_decoder_ort.py  run_audio_vae_encoder_ort.py  run_decode_chunk_ort.py  run_decode_step_ort.py  run_prefill_ort.py  session_factory.py
tests/export/: test_bf16_ort_cpu_patch.py  test_dtype_cleanup.py  test_export_contract_consistency.py
tests/parity/: test_audio_vae_decoder.py  test_audio_vae_encoder.py  test_bf16_compute_path.py  test_decode_chunk.py  test_decode_step.py  test_prefill.py
tests/smoke/: test_cpu_only_runtime.py  test_decode_stop_policy.py  test_ort_session_options.py
tools/bench/: run_benchmarks.py  sweep_ort_config.py
tools/profile/: parse_ort_profile.py  probe_io_binding.py  run_profiled_bench.py  summarize_dtype_casts.py
